# google-ad-manager-mcp

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  pyproject.toml
.claude/: settings.local.json
src/gam_mcp/: client.py  server.py
src/gam_mcp/tools/: advertisers.py  creatives.py  line_items.py  orders.py  reporting.py  verification.py
tests/: test_advertisers.py  test_client.py  test_creatives.py  test_line_items.py  test_server.py
