[project]
name = "gam-mcp-server"
version = "0.1.0"
description = "Google Ad Manager MCP Server"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.14.0,<3.0.0",
    "googleads>=48.0.0,<49.0.0",
    "httpx>=0.28.0,<1.0.0",
]

[project.scripts]
gam-mcp = "gam_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gam_mcp"]
